# git-statuses

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix
.github/workflows/: ci.yml  deploy.yml
scripts/: release_version.ps1  release_version.sh
src/: cli.rs  gitinfo.rs  main.rs  printer.rs  util.rs
src/tests/: cli_test.rs  gitinfo_test.rs  mod.rs  util_test.rs
src/tests/snapshots/: git_statuses__tests__cli_test__git-statuses.snap
